; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_datetimepicker.c_zeroPadSpinbox.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_datetimepicker.c_zeroPadSpinbox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%02d\00", align 1
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @zeroPadSpinbox to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zeroPadSpinbox(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @realSpinValue(i32* %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i32* @g_strdup_printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @GTK_ENTRY(i32* %11)
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @gtk_entry_set_text(i32 %12, i32* %13)
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @g_free(i32* %15)
  %17 = load i32, i32* @TRUE, align 4
  ret i32 %17
}

declare dso_local i32 @realSpinValue(i32*) #1

declare dso_local i32* @g_strdup_printf(i8*, i32) #1

declare dso_local i32 @gtk_entry_set_text(i32, i32*) #1

declare dso_local i32 @GTK_ENTRY(i32*) #1

declare dso_local i32 @g_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
